--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webfft": "^1.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
